syntax = "proto3";

import "ikipb/iki_iam/iam.proto";

option go_package = "/tokensvc";

package tokensvc;

service TokenSvc {
  rpc GetJwkset(GetJwksetRequest) returns (GetJwksetResponse) {}
  rpc AccessToken(AccessTokenRequest) returns (AccessTokenResponse) {}
}

message GetJwksetRequest{}
message GetJwksetResponse{
  bytes jwkset = 1;
}

message AccessTokenRequest {
  string refresh_token = 1;
  iam.EntityType entity_type = 2;
}

message AccessTokenResponse {
  string access_token = 1;
}
